# log-sense

./: .gitignore  README.md  TODO.md  analyze.ipynb  dataset.py  docker-compose.yml  fit_rapid.py  lanobert.ipynb  loghub.ipynb  logsense.py  main.py  matrix.ipynb  pyproject.toml  requirements.txt  setup.sh  testing.md  todo.md  train_finetune_loggpt.py
client/: .env  Dockerfile.dev  Dockerfile.prod  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.server.json
client/components/: AddServiceModal.tsx  AnomaliesTable.tsx  Layout.tsx  ListServices.tsx  NavbarSimple.tsx  (+1 more)
experiments/: dataset.py  fit_rapid.py  logsense.py  train_finetune_loggpt.py
flink/: Dockerfile  README.md  flink.py  models.py  requirements.txt  utils.py
inference/: .gitignore  app.py  log_gpt.py  models.py  rapid.ipynb  rapid.py  train_jobs.py
lanobert/: finetune.py  inference.py  preprocess.py
log_gpt/: config.py  finetune.py  inference.py  preprocess.py  pretrain.py
loki-kafka/: Dockerfile  kafka_loki.py  requirements.txt
model/: Dockerfile.inference  Dockerfile.train  inference.py  log_gpt.py  models.py  rapid.py  requirements.txt  train.py
rapid/: build_db.py  model.py  utils.py
src/: config.py  dataset.py  finetune.py  inference.py  preprocess.py
streaming/: .gitignore  GROUPING.md  ZmFrZS8xMGQ0YjBhMTYyNjA1YmQ3OjE4ZTkyZDhmNjQzOjE4ZTkzMjE2MTcyOjgyMThlYzE3  ZmFrZS8xMGQ0YjBhMTYyNjA1YmQ3OjE4ZTlhYTJjM2JkOjE4ZTlhYTNmZDIzOjdjZWU5NTU3  flink.py  flink_loggpt.py  flink_rapid.py  kafka_loki.py  main.py  utils.py
test/: loki.config.yml  promtail.config.yml
(+58 files in other folders)
