[tool.poetry]
name = "log-sense"
version = "0.1.0"
description = ""
authors = ["Kamui <fin-kamui@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.38.2"
torch = "^2.2.1"
pandas = "^2.2.1"
numpy = "^1.26.4"
datasets = "^2.18.0"
tokenizers = "^0.15.2"
scikit-learn = "^1.4.1.post1"
drain3 = "^0.9.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
